--- a/index.html
+++ b/index.html
@@ -6,34 +6,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie</title>
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/modal.css">
     <link rel="stylesheet" href="css/footer.css">
 
-    <style>
-        * {
-
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-        }
-
-        ul {
-            list-style-type: none;
-            padding: 0;
-            text-align: center;
-        }
-
-        li {
-            cursor: pointer;
-        }
-
-        li:hover {
-            background-color: #f9f9f9;
-        }
-    </style>
 </head>
 
 <body>
@@ -42,11 +20,11 @@
         <a href="index.html">
             <h1>Movie</h1>
         </a>
-        <form id="search-form">
-            <input type="text" id="search-input" placeholder="Search Movie">
+        <form id="searchForm">
+            <input type="text" id="searchInput" placeholder="Search Movie">
         </form>
         <nav>
-            <ul id="nav-list">
+            <ul id="navList">
                 <li><a href="bookmark.html">BookMark</a></li>
             </ul>
         </nav>
