영화 실시간 TOP 100 -> 실시간 영화 TOP 100

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <main>
         <section id="movie-list" class="movie-list">
-            <h1>영화 실시간 TOP 100</h1>
+            <h1>실시간 영화 TOP 100</h1>
             <div id="movieListView" class="movieMiddle">
                 <!-- 
                     javascript DOM 을 통해  레이아웃(HTML) 을 가져와서 
