--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie</title>
+    <title>The Movie Top 100</title>
+
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/main.css">
@@ -15,35 +15,41 @@
 </head>
 
 <body>
-
+    <!-- 상단 헤더 -->
     <header id="header" class="header">
-        <a href="./">
-            <h1>Movie</h1>
+
+        <!-- 메인 웹사이트트 링크-->
+        <a id="siteName" href="./">
+            <h1>TMT100</h1>
         </a>
-        <form id="searchForm">
-            <input type="text" id="searchInput" placeholder="Search Movie">
-        </form>
-        <nav>
-            <ul id="navList">
-                <li><a href="?bookmark">BookMark</a></li>
-            </ul>
-        </nav>
+
+        <!-- 검색 창 -->
+        <div id="topFixed">
+            <form id="searchForm">
+                <input type="text" id="searchInput" placeholder="Search Movie">
+            </form>
+        </div>
+
+        <!-- 북 마크 버튼 -->
+        <button id="bookmarkButton" class="bookmarkButton">BookMark</button>
     </header>
 
-
+    <!-- 메인 창 -->
     <main>
         <section id="movieList" class="movieList">
             <h1>실시간 영화 TOP 100</h1>
-            <div id="noResultsMessage">검색 결과가 없습니다.</div>
+
+            <!-- 영화 정보 -->
             <div id="movieListView" class="movieMiddle">
-                <!-- 
-                    javascript DOM 을 통해  레이아웃(HTML) 을 가져와서 
-                    뿌려준다.
-                -->
+                <!-- javascript DOM 을 통해  레이아웃(HTML) 을 가져와서 뿌려준다. -->
             </div>
+
+            <!-- 검색 실패 시 뜨는 내용 -->
+            <div id="noResultsMessage"></div>
         </section>
     </main>
 
+    <!-- 모달 창 -->
     <div class="modal" id="modal">
         <div class="modalContent">
             <span class="close" id="close">&times;</span>
@@ -52,27 +58,15 @@
         </div>
     </div>
 
-    <div class="modal" id="bookmarkModal">
-        <div class="modalContent">
-            <span class="close" id="closeBookmark">&times;</span>
-            <h2>BookMark</h2>
-            <ul id="bookmarkList">
-                <li>Movie 1</li>
-                <li>Movie 2</li>
-                <li>Movie 3</li>
-                <li>Movie 4</li>
-                <li>Movie 5</li>
-            </ul>
-        </div>
-    </div>
-
+    <!-- 푸터 -->
     <footer>
         <p>&copy; 2025 Movie</p>
     </footer>
-    <script src="JavaScript/Bookmark.js"></script>
-    <script src="JavaScript/Modal.js"></script>
+
     <script src="JavaScript/Movie.js"></script>
     <script src="JavaScript/Search.js"></script>
+    <script src="JavaScript/Bookmark.js"></script>
+    <script src="JavaScript/Modal.js"></script>
 
 </body>
 
