모달 창 구현

--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
     </main>
 
     <!-- 모달 창 -->
-    <div class="modal" id="modal">
+    <div class="modal">
         <div class="modalContent">
-            <span class="close" id="close">&times;</span>
-            <h2>Movie Details</h2>
-            <p id="movieDetails"></p>
+            <span class="close">&times;</span>
+            <div id="modalAdd">
+
+            </div>
         </div>
     </div>
 
