시간추가 및 동기

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Movie Top 100</title>
+    <title>The Movie Top</title>
 
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/header.css">
@@ -20,7 +20,7 @@
 
         <!-- 메인 웹사이트트 링크-->
         <a id="siteName" href="./">
-            <h1>TMT100</h1>
+            <h1>TMT</h1>
         </a>
 
         <!-- 검색 창 -->
@@ -61,13 +61,14 @@
 
     <!-- 푸터 -->
     <footer>
-        <p>&copy; 2025 Movie</p>
+        <p>&copy; Movie</p>
     </footer>
 
     <script src="JavaScript/Movie.js"></script>
     <script src="JavaScript/Search.js"></script>
     <script src="JavaScript/Bookmark.js"></script>
     <script src="JavaScript/Modal.js"></script>
+    <script src="JavaScript/index.js"></script>
 
 </body>
 
