--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
         <p>&copy; Movie</p>
     </footer>
 
-    <script src="JavaScript/Movie.js"></script>
-    <script src="JavaScript/Search.js"></script>
-    <script src="JavaScript/Bookmark.js"></script>
-    <script src="JavaScript/Modal.js"></script>
+    <script src="JavaScript/movie.js"></script>
+    <script src="JavaScript/search.js"></script>
+    <script src="JavaScript/bookmark.js"></script>
+    <script src="JavaScript/modal.js"></script>
     <script src="JavaScript/index.js"></script>
 
 </body>
