여러가지 추가

--- a/index.html
+++ b/index.html
@@ -37,12 +37,18 @@
     <!-- 메인 창 -->
     <main>
         <section id="movieList" class="movieList">
-            <h1>실시간 영화 TOP 100</h1>
+            <h1>실시간 영화 TOP</h1>
 
-            <!-- 영화 정보 -->
-            <div id="movieListView" class="movieMiddle">
+            <!-- 메인 화면 -->
+            <div id="movieMain" class="movieMiddle">
                 <!-- javascript DOM 을 통해  레이아웃(HTML) 을 가져와서 뿌려준다. -->
             </div>
+
+            <!-- 북 마크 창-->
+            <div id="movieBookmark" class="movieMiddle"></div>
+            
+            <!-- 검색 화면-->
+            <div id="movieSearch" class="movieMiddle"></div>
 
             <!-- 검색 실패 시 뜨는 내용 -->
             <div id="noResultsMessage"></div>
