모달창 업데이트

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <!-- 메인 웹사이트트 링크-->
         <a id="siteName" href="./">
-            <h1>TMT</h1>
+            <h1>Moive Top</h1>
         </a>
 
         <!-- 검색 창 -->
@@ -46,7 +46,7 @@
 
             <!-- 북 마크 창-->
             <div id="movieBookmark" class="movieMiddle"></div>
-            
+
             <!-- 검색 화면-->
             <div id="movieSearch" class="movieMiddle"></div>
 
