--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Movie Top</title>
 
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/modal.css">
-    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="/NBC_Movie_Review/css/index.css">
+    <link rel="stylesheet" href="/NBC_Movie_Review/css/header.css">
+    <link rel="stylesheet" href="/NBC_Movie_Review/css/main.css">
+    <link rel="stylesheet" href="/NBC_Movie_Review/css/modal.css">
+    <link rel="stylesheet" href="/NBC_Movie_Review/css/footer.css">
 
 </head>
 
@@ -70,11 +70,11 @@
         <p>&copy; Movie</p>
     </footer>
 
-    <script src="./JavaScript/movie.js"></script>
-    <script src="./JavaScript/search.js"></script>
-    <script src="./JavaScript/modal.js"></script>
-    <script src="./JavaScript/bookmark.js"></script>
-    <script src="./JavaScript/index.js"></script>
+    <script src="/NBC_Movie_Review/JavaScript/movie.js"></script>
+    <script src="/NBC_Movie_Review/JavaScript/search.js"></script>
+    <script src="/NBC_Movie_Review/JavaScript/modal.js"></script>
+    <script src="/NBC_Movie_Review/JavaScript/bookmark.js"></script>
+    <script src="/NBC_Movie_Review/JavaScript/index.js"></script>
 
 </body>
 
