--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Movie Top</title>
+    <base href="/NBC_Movie_Review/">
 
-    <link rel="stylesheet" href="/NBC_Movie_Review/CSS/index.css">
-    <link rel="stylesheet" href="/NBC_Movie_Review/CSS/header.css">
-    <link rel="stylesheet" href="/NBC_Movie_Review/CSS/main.css">
-    <link rel="stylesheet" href="/NBC_Movie_Review/CSS/modal.css">
-    <link rel="stylesheet" href="/NBC_Movie_Review/CSS/footer.css">
+    <link rel="stylesheet" href="CSS/index.css">
+    <link rel="stylesheet" href="CSS/header.css">
+    <link rel="stylesheet" href="CSS/main.css">
+    <link rel="stylesheet" href="CSS/modal.css">
+    <link rel="stylesheet" href="CSS/footer.css">
 
 </head>
 
@@ -70,11 +71,11 @@
         <p>&copy; Movie</p>
     </footer>
 
-    <script src="/NBC_Movie_Review/JavaScript/movie.js"></script>
-    <script src="/NBC_Movie_Review/JavaScript/search.js"></script>
-    <script src="/NBC_Movie_Review/JavaScript/modal.js"></script>
-    <script src="/NBC_Movie_Review/JavaScript/bookmark.js"></script>
-    <script src="/NBC_Movie_Review/JavaScript/index.js"></script>
+    <script src="JavaScript/movie.js"></script>
+    <script src="JavaScript/search.js"></script>
+    <script src="JavaScript/modal.js"></script>
+    <script src="JavaScript/bookmark.js"></script>
+    <script src="JavaScript/index.js"></script>
 
 </body>
 
