파일위치수정

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <link rel="stylesheet" href="CSS/modal.css">
     <link rel="stylesheet" href="CSS/footer.css">
 
+    <script src="JavaScript/movie.js"></script>
+    <script src="JavaScript/search.js"></script>
+    <script src="JavaScript/modal.js"></script>
+    <script src="JavaScript/bookmark.js"></script>
+    <script src="JavaScript/index.js"></script>
 </head>
 
 <body>
@@ -21,7 +26,7 @@
 
         <!-- 메인 웹사이트트 링크-->
         <a id="siteName" href="./">
-            <h1>Moive Top</h1>
+            <h1>Movie Top</h1>
         </a>
 
         <!-- 검색 창 -->
@@ -70,12 +75,6 @@
     <footer>
         <p>&copy; Movie</p>
     </footer>
-
-    <script src="JavaScript/movie.js"></script>
-    <script src="JavaScript/search.js"></script>
-    <script src="JavaScript/modal.js"></script>
-    <script src="JavaScript/bookmark.js"></script>
-    <script src="JavaScript/index.js"></script>
 
 </body>
 
