--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="CSS/modal.css">
     <link rel="stylesheet" href="CSS/footer.css">
 
-    <script src="JavaScript/movie.js"></script>
-    <script src="JavaScript/search.js"></script>
-    <script src="JavaScript/modal.js"></script>
-    <script src="JavaScript/bookmark.js"></script>
-    <script src="JavaScript/index.js"></script>
+    <script src="JAVASCRIPT/movie.js"></script>
+    <script src="JAVASCRIPT/search.js"></script>
+    <script src="JAVASCRIPT/modal.js"></script>
+    <script src="JAVASCRIPT/bookmark.js"></script>
+    <script src="JAVASCRIPT/index.js"></script>
 </head>
 
 <body>
