--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Movie Top</title>
-    <base href="/NBC_Movie_Review/">
+    <!-- <base href="/NBC_Movie_Review/"> -->
 
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="stylesheet" href="CSS/header.css">
