--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Movie Top</title>
-    <!-- <base href="/NBC_Movie_Review/"> -->
+    <base href="/NBC_Movie_Review/">
 
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="stylesheet" href="CSS/header.css">
@@ -13,11 +13,6 @@
     <link rel="stylesheet" href="CSS/modal.css">
     <link rel="stylesheet" href="CSS/footer.css">
 
-    <script src="JavaScript/movie.js"></script>
-    <script src="JavaScript/search.js"></script>
-    <script src="JavaScript/modal.js"></script>
-    <script src="JavaScript/bookmark.js"></script>
-    <script src="JavaScript/index.js"></script>
 </head>
 
 <body>
@@ -75,6 +70,12 @@
     <footer>
         <p>&copy; Movie</p>
     </footer>
+
+    <script src="JavaScript/movie.js"></script>
+    <script src="JavaScript/search.js"></script>
+    <script src="JavaScript/modal.js"></script>
+    <script src="JavaScript/bookmark.js"></script>
+    <script src="JavaScript/index.js"></script>
 
 </body>
 
